Atualização do footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="htpps://gustavoguanabara.github.io/" target="_blank" rel="external">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank" rel="external">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/marcobmendes" target="_blank">Marco B. Mendes</a> e <a href="htpps://gustavoguanabara.github.io/" target="_blank" rel="external">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank" rel="external">CursoemVideo</a></p>
     </footer>
 
 </body>
